--- a/compositiondefinition.yaml
+++ b/compositiondefinition.yaml
@@ -1,10 +1,10 @@
 apiVersion: core.krateo.io/v1alpha1
 kind: CompositionDefinition
 metadata:
-  name: pippo
+  name: pippo-test-1
   namespace: mlflow-system
 spec:
   chart:
-    repo: pippo
+    repo: pippo-test-1
     url: https://dusty-82.github.io/mlflow
     version: 1.0.0
